--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8090
 logging.path=logs
 #Database connection settings
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${db_hostname:localhost}:${db_port:5432}/springboard_db
+spring.datasource.url=jdbc:postgresql://${db_hostname:localhost}:${db_port:5432}/springbutt_db
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
